--- a/frontend/LoginUi/res.qrc
+++ b/frontend/LoginUi/res.qrc
@@ -2,4 +2,7 @@
   <qresource prefix="images">
     <file>C:/Users/NOVA BURST/Downloads/ui.png</file>
   </qresource>
+  <qresource prefix="new image">
+    <file>C:/Users/NOVA BURST/Downloads/nftbgm.png</file>
+  </qresource>
 </RCC>
