--- a/frontend/bankdetails.ui
+++ b/frontend/bankdetails.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>695</width>
+    <width>898</width>
     <height>599</height>
    </rect>
   </property>
@@ -15,142 +15,106 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(232, 0, 232);
-background-color: rgb(0, 0, 0);</string>
+background-color: rgb(0, 0, 0);
+background: transparent;</string>
   </property>
-  <widget class="QLineEdit" name="creditcardno">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>280</y>
-     <width>371</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your credit card number: </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>270</x>
-     <y>150</y>
-     <width>231</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 30pt &quot;Comic Sans MS&quot;;
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;NFT ADDA&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="addbank">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>380</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(227, 227, 227);
-background-color: rgb(93, 93, 93);</string>
-   </property>
-   <property name="text">
-    <string>Add bank account</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>200</y>
-     <width>361</width>
+     <x>310</x>
+     <y>280</y>
+     <width>391</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);
-font: 24pt &quot;Mangal&quot;;
+color: rgb(0, 0, 0);
+font: 24pt &quot;Cooper Black&quot;;
+font: 24pt &quot;Cooper Black&quot;;
 </string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt; font-weight:600;&quot;&gt;PLease fill in the bank details.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="cvv">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>320</y>
-     <width>371</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your cvv code (eg: 341)</string>
-   </property>
-  </widget>
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>-50</x>
      <y>10</y>
-     <width>681</width>
+     <width>861</width>
      <height>551</height>
     </rect>
    </property>
    <property name="autoFillBackground">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="styleSheet">
     <string notr="true">background-image: url(:‪C:/Users/NOVA BURST/Downloads/nftbgm.png);
 background-radius: 20px;
 background: transparent;</string>
    </property>
-   <widget class="QLabel" name="label">
+   <widget class="QPushButton" name="addbank">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>681</width>
-      <height>551</height>
+      <x>490</x>
+      <y>420</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(227, 227, 227);
+background-color: rgb(93, 93, 93);</string>
+    </property>
+    <property name="text">
+     <string>Add bank account</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="cvv">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>360</y>
+      <width>371</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+color: rgb(197, 197, 197);</string>
     </property>
     <property name="text">
      <string/>
     </property>
-    <property name="img" stdset="0">
-     <url>
-      <string>qrc:/new image/C:/Users/NOVA BURST/Downloads/nftbgm.png</string>
-     </url>
+    <property name="placeholderText">
+     <string>Enter your cvv code (eg: 341)</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="creditcardno">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>320</y>
+      <width>371</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+color: rgb(197, 197, 197);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string extracomment="Enter your credit card no.">Enter your credit card number: </string>
     </property>
    </widget>
   </widget>
   <zorder>widget</zorder>
-  <zorder>creditcardno</zorder>
-  <zorder>label_3</zorder>
-  <zorder>addbank</zorder>
   <zorder>label_4</zorder>
-  <zorder>cvv</zorder>
  </widget>
  <resources>
   <include location="LoginUi/res.qrc"/>
