--- a/frontend/signup.ui
+++ b/frontend/signup.ui
@@ -6,41 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>915</width>
-    <height>587</height>
+    <width>650</width>
+    <height>491</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(232, 0, 232);
+   <string notr="true"> background-color: rgb(232, 0, 232);
 background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
 background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
-background-color: rgb(0, 0, 0);</string>
+background-color: rgb(0, 0, 0);
+background: transparent;</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>60</y>
-     <width>231</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 30pt &quot;Comic Sans MS&quot;;
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;NFT ADDA&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="fname">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>210</y>
+     <x>380</x>
+     <y>340</y>
      <width>301</width>
      <height>30</height>
     </rect>
@@ -59,8 +43,8 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLineEdit" name="conpass">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>370</y>
+     <x>380</x>
+     <y>500</y>
      <width>300</width>
      <height>30</height>
     </rect>
@@ -79,8 +63,8 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLineEdit" name="email">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>290</y>
+     <x>380</x>
+     <y>420</y>
      <width>301</width>
      <height>30</height>
     </rect>
@@ -99,8 +83,8 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>330</y>
+     <x>380</x>
+     <y>460</y>
      <width>301</width>
      <height>30</height>
     </rect>
@@ -119,8 +103,8 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLineEdit" name="lname">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>250</y>
+     <x>380</x>
+     <y>380</y>
      <width>301</width>
      <height>30</height>
     </rect>
@@ -139,15 +123,17 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>130</y>
+     <x>440</x>
+     <y>280</y>
      <width>151</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);
-font: 24pt &quot;Mangal&quot;;
+font: 24pt &quot;Copperplate Gothic Bold&quot;;
+color: rgb(0, 0, 0);
+font: 24pt &quot;Cooper Black&quot;;
 </string>
    </property>
    <property name="text">
@@ -157,8 +143,8 @@ font: 24pt &quot;Mangal&quot;;
   <widget class="QPushButton" name="signupbutton">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>440</y>
+     <x>480</x>
+     <y>570</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -174,8 +160,8 @@ background-color: rgb(93, 93, 93);</string>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>480</y>
+     <x>380</x>
+     <y>610</y>
      <width>181</width>
      <height>16</height>
     </rect>
@@ -191,8 +177,8 @@ font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
   <widget class="QPushButton" name="loginbutton">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>480</y>
+     <x>570</x>
+     <y>610</y>
      <width>101</width>
      <height>21</height>
     </rect>
