--- a/frontend/SIGNUP FORM.ui
+++ b/frontend/SIGNUP FORM.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>677</width>
-    <height>587</height>
+    <width>794</width>
+    <height>795</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,13 +22,16 @@ background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
 background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
 background-color: rgb(0, 0, 0);</string>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>true</bool>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>60</y>
+     <x>300</x>
+     <y>50</y>
      <width>231</width>
-     <height>51</height>
+     <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -139,9 +145,9 @@ color: rgb(197, 197, 197);</string>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>130</y>
-     <width>151</width>
+     <x>320</x>
+     <y>110</y>
+     <width>181</width>
      <height>51</height>
     </rect>
    </property>
@@ -157,8 +163,8 @@ font: 24pt &quot;Mangal&quot;;
   <widget class="QPushButton" name="signupbutton">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>440</y>
+     <x>340</x>
+     <y>430</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -174,10 +180,10 @@ background-color: rgb(93, 93, 93);</string>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>230</x>
      <y>480</y>
-     <width>181</width>
-     <height>16</height>
+     <width>231</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -191,10 +197,10 @@ font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
   <widget class="QPushButton" name="loginbutton">
    <property name="geometry">
     <rect>
-     <x>460</x>
+     <x>480</x>
      <y>480</y>
      <width>101</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -209,7 +215,7 @@ background-color: rgb(77, 77, 77);</string>
   </widget>
  </widget>
  <resources>
-  <include location="C:/Users/NOVA BURST/Downloads/nft bgm.qrc"/>
+  <include location="LoginUi/res.qrc"/>
   <include location="C:/Users/NOVA BURST/Downloads/res.qrc"/>
   <include location="LoginUi/res.qrc"/>
   <include location="C:/Users/NOVA BURST/Downloads/New Text Document.txt"/>
