--- a/frontend/buysell.ui
+++ b/frontend/buysell.ui
@@ -6,163 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>846</width>
-    <height>698</height>
+    <width>946</width>
+    <height>727</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true"> background-color: rgb(232, 0, 232);
-background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
-background-image: url(:/images/C:/Users/NOVA BURST/Downloads/ui.png);
-background-color: rgb(0, 0, 0);
-background: Transparent;</string>
-  </property>
-  <widget class="QLineEdit" name="fname">
+  <widget class="QPushButton" name="sellbutton">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>290</y>
-     <width>311</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your first name</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="conpass">
-   <property name="geometry">
-    <rect>
-     <x>369</x>
-     <y>489</y>
-     <width>311</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>confirm your password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="email">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>390</y>
-     <width>311</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your email</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="password">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>440</y>
-     <width>311</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>enter your password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lname">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>340</y>
-     <width>311</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your last name</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>440</x>
-     <y>210</y>
-     <width>151</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-font: 24pt &quot;Copperplate Gothic Bold&quot;;
-color: rgb(0, 0, 0);
-font: 24pt &quot;Cooper Black&quot;;
-</string>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;SIGN UP&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>360</x>
-     <y>600</y>
-     <width>241</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Already have an account? &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="signupbutton">
-   <property name="geometry">
-    <rect>
-     <x>390</x>
-     <y>540</y>
-     <width>271</width>
+     <x>270</x>
+     <y>530</y>
+     <width>389</width>
      <height>42</height>
     </rect>
    </property>
@@ -364,16 +220,46 @@ QPushButton:hover { background-color: #5588CC; }</string>
     <set>Qt::ImhNone</set>
    </property>
    <property name="text">
-    <string>CREATE ACCOUNT</string>
+    <string>SELL</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="loginbutton">
+  <widget class="QCommandLinkButton" name="backbutton">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>600</y>
-     <width>91</width>
+     <x>150</x>
+     <y>270</y>
+     <width>181</width>
      <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BACK</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="nftname">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>350</y>
+     <width>421</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QComboBox { background-color: #336699; color: white; border-radius: 20px; padding: 10px 20px; font-size: 18px; }&quot;
+QComBox:hover { background-color: #5588CC; }</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buybutton">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>470</y>
+     <width>389</width>
+     <height>42</height>
     </rect>
    </property>
    <property name="palette">
@@ -567,22 +453,27 @@ QPushButton:hover { background-color: #5588CC; }</string>
     <enum>Qt::LeftToRight</enum>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: #336699; color: white; border-radius: 20px; padding: 10px 20px; font-size: 14px; }&quot;
+    <string notr="true">QPushButton { background-color: #336699; color: white; border-radius: 20px; padding: 10px 20px; font-size: 18px; }&quot;
 QPushButton:hover { background-color: #5588CC; }</string>
    </property>
    <property name="inputMethodHints">
     <set>Qt::ImhNone</set>
    </property>
    <property name="text">
-    <string>LOG IN</string>
+    <string>BUY</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="quantity">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>350</y>
+     <width>71</width>
+     <height>41</height>
+    </rect>
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="C:/Users/NOVA BURST/Downloads/nft bgm.qrc"/>
-  <include location="C:/Users/NOVA BURST/Downloads/res.qrc"/>
-  <include location="LoginUi/res.qrc"/>
-  <include location="C:/Users/NOVA BURST/Downloads/res.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
