--- a/frontend/infomenu.ui
+++ b/frontend/infomenu.ui
@@ -6,85 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>695</width>
-    <height>599</height>
+    <width>946</width>
+    <height>727</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">background-color: rgb(232, 0, 232);
-background-color: rgb(0, 0, 0);
-background: transparent;</string>
-  </property>
-  <widget class="QLineEdit" name="Loginemail">
+  <widget class="QPushButton" name="buybutton">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>350</y>
-     <width>301</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>Enter your email</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Loginpass">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>389</y>
-     <width>301</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-color: rgb(197, 197, 197);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="placeholderText">
-    <string>enter your password</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>460</x>
-     <y>270</y>
-     <width>131</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-font: 24pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 0);
-font: 24pt &quot;Mangal&quot;;
-font: 24pt &quot;Cooper Black&quot;;
-</string>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;LOG IN&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Login">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>430</y>
-     <width>271</width>
+     <x>290</x>
+     <y>650</y>
+     <width>389</width>
      <height>42</height>
     </rect>
    </property>
@@ -286,7 +220,82 @@ QPushButton:hover { background-color: #5588CC; }</string>
     <set>Qt::ImhNone</set>
    </property>
    <property name="text">
-    <string>LOG IN</string>
+    <string>BUY</string>
+   </property>
+  </widget>
+  <widget class="QCommandLinkButton" name="backbutton">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>270</y>
+     <width>181</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BACK</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="nftdetails">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>320</y>
+     <width>671</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>12</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::PreventContextMenu</enum>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+background-color: rgb(255, 255, 255);
+background: Transparent;</string>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="nftname">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>270</y>
+     <width>421</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QComboBox { background-color: #336699; color: white; border-radius: 20px; padding: 10px 20px; font-size: 18px; }&quot;
+QComBox:hover { background-color: #5588CC; }</string>
    </property>
   </widget>
  </widget>
