--- a/frontend/bankdetails.ui
+++ b/frontend/bankdetails.ui
@@ -99,7 +99,7 @@ color: rgb(197, 197, 197);</string>
     <property name="geometry">
      <rect>
       <x>400</x>
-      <y>440</y>
+      <y>470</y>
       <width>311</width>
       <height>42</height>
      </rect>
@@ -303,6 +303,26 @@ QPushButton:hover { background-color: #5588CC; }</string>
     </property>
     <property name="text">
      <string>ADD BANK ACCOUNT</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="wallet">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>420</y>
+      <width>381</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+color: rgb(197, 197, 197);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string>Enter the money add into your wallet:</string>
     </property>
    </widget>
   </widget>
