--- a/frontend/signup.ui
+++ b/frontend/signup.ui
@@ -10,6 +10,12 @@
     <height>717</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>991</width>
+    <height>717</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -18,13 +24,13 @@
 background-color: rgb(0, 0, 0);
 background: transparent;</string>
   </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>-10</x>
-     <y>140</y>
+     <x>-80</x>
+     <y>40</y>
      <width>861</width>
-     <height>551</height>
+     <height>621</height>
     </rect>
    </property>
    <property name="autoFillBackground">
@@ -368,7 +374,7 @@ color: rgb(197, 197, 197);</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>290</x>
       <y>500</y>
       <width>391</width>
       <height>41</height>
@@ -388,7 +394,7 @@ font: 24pt &quot;Cooper Black&quot;;
    <widget class="QPushButton" name="loginbutton">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>690</x>
       <y>500</y>
       <width>91</width>
       <height>41</height>
